--- a/pancard.html
+++ b/pancard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href="pancard2.css">
+    <link rel = "stylesheet" href="pancard.css">
 </head>
 <body>
     <div style="background-color: rgba(241, 240, 146, 0.726); margin: auto; font-family: Arial, Helvetica, sans-serif; font-size: 10px; max-width: 950px;">
